# material-science-expert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_data_extractor.py  chatbot.py  config.py  custom_embeddings.py  docker-compose.yml  index.py  pyproject.toml  rough_work.py  search_web.py  test-material-science.ipynb
.streamlit/: config.toml
api_data_extractor/: main.py
chatbot_components/: sidebar.py
custom_callbacks/: rag_retrieval_handler.py  stream_handler.py
prompts/: utility_prompts.py
qdrant_storage/: raft_state.json
streamlit_components/: page_styles.py  session_state.py  sidebar.py
utils/: callback_handlers.py  custom_embeddings.py  data_formatting.py  doc_formatter.py  embedding_models.py  embeddings.py  prompts.py  qdrant_client.py  state_graph.py
