[tool.poetry]
name = "material-science-expert"
version = "0.1.0"
description = "LLM wrapper for llama3.2:1b with context information from Material Science project"
authors = ["saj3sh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
streamlit = "^1.40.1"
langchain-ollama = "^0.2.0"
pydantic = "2.9.2"   # version 2.10 has breaking changes
mp-api = "^0.42.2"
qdrant-client = "^1.12.1"
langchain-community = "^0.3.7"
langchain-chroma = "^0.1.4"
huggingface-hub = "^0.26.2"
transformers = "^4.46.3"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
